fixed horizontal scroll problem added dummy text

--- a/src/dealernet.css
+++ b/src/dealernet.css
@@ -57,6 +57,6 @@ margin-right: 10%;
 }
     .dealercard{
         width: 80vw;
-        margin: 5vw
+        margin: 3.5vw
     }
 }
