--- a/src/products.css
+++ b/src/products.css
@@ -36,6 +36,7 @@
 
 .category {
   margin-top: 20%;
+  width: 100%;
   text-align: center;
   cursor: pointer;
 }
@@ -58,13 +59,13 @@
     width: 100%;
   }
   .searchbar {
-    margin: 3px;
+    margin: 2px;
   }
   .category {
     width: 100%;
     display: inline-block;
     margin: 0px;
-    padding: 10px;
+    padding: 0px;
   }
   .catagorytab {
     font-weight: bold;
@@ -132,6 +133,10 @@
   .productlist {
     width: 100%;
     font-size: 90%;
+  }
+  .productcard{
+    margin: 1%;
+
   }
 }
 @media screen and (max-width: 600px) {
